--- a/home.html
+++ b/home.html
@@ -26,6 +26,23 @@
         <link rel="stylesheet" href="home.css">
     </head>
     <body>
+        <!-- Default Statcounter code for TYPERACER https://typeracersp.herokuapp.com/
+-->
+<script type="text/javascript">
+var sc_project=12705014; 
+var sc_invisible=0; 
+var sc_security="9ea2473e"; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+Statcounter" href="https://statcounter.com/" target="_blank"><img
+class="statcounter" src="https://c.statcounter.com/12705014/0/9ea2473e/0/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+<a href="https://statcounter.com/p12705014/?guest=1">View My Stats</a>
         <div class="alert" >
             <div class="center-msg">
                 <h1>Getting lobby ready</h1>
